--- a/packages/styles/components/notification.scss
+++ b/packages/styles/components/notification.scss
@@ -31,6 +31,7 @@ $notification-variants: ('info' 'warning' 'error' 'success');
 .db-notification__icon,
 .db-notification__close-icon {
   svg {
+    @include safari-svg-fix;
     display: block;
     fill: currentColor;
   }
