--- a/packages/styles/components/status.scss
+++ b/packages/styles/components/status.scss
@@ -6,6 +6,7 @@
 
   svg {
     $icon-safe-area: 2px;
+    @include safari-svg-fix;
     flex-shrink: 0;
     height: db-icon-size('s');
     margin: 0 db-spacing('xs') 0 #{-$icon-safe-area - 1px};
